[package]
name = "rust_aws_s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version = "1.5.10", features = ["behavior-version-latest"]}
aws-sdk-s3 = {version = "1.65.0", features = ["behavior-version-latest"]}
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["full"] }
